[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Doug <douglazenby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.1.1"
requests = "^2.32.3"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
