[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Doug <douglazenby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
jupyter = "^1.1.1"
requests = "^2.32.3"
numpy = "<2.0"
pandas = "<2.1.0"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
plotly = "^5.24.1"
hsfs = { version = ">=3.7.0,<3.8.0", extras = ["python"] }
botocore = ">=1.31,<2.0"
hopsworks = ">=3.7,<4.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
optuna = "^4.0.0"
lightgbm = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"